// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vaults.utils getVaultPerformance no rewards or harvests returns value sources from fallback methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 189.11917098445593,
    "boostable": false,
    "harvestable": false,
    "maxApr": 189.11917098445593,
    "minApr": 189.11917098445593,
    "name": "Vault Compounding",
    "oneDay": 183.4170854271372,
    "sevenDay": 189.11917098445593,
    "thirtyDay": 214.7058823529413,
    "threeDay": 185.27918781725862,
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_flat_Sushi_emission",
    "apr": 8.888,
    "boostable": false,
    "harvestable": false,
    "maxApr": 8.888,
    "minApr": 8.888,
    "name": "Sushi Rewards",
    "oneDay": 8.888,
    "sevenDay": 8.888,
    "thirtyDay": 8.888,
    "threeDay": 8.888,
    "type": "flat_Sushi_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "harvestable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "oneDay": 6.969,
    "sevenDay": 6.969,
    "thirtyDay": 6.969,
    "threeDay": 6.969,
    "type": "boosted_bBADGER_emission",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests non compatible network vault performances returns value sources from fallback methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967",
    "addressValueSourceType": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967_compound",
    "apr": 189.11917098445593,
    "boostable": false,
    "harvestable": false,
    "maxApr": 189.11917098445593,
    "minApr": 189.11917098445593,
    "name": "Vault Compounding",
    "oneDay": 183.4170854271372,
    "sevenDay": 189.11917098445593,
    "thirtyDay": 214.7058823529413,
    "threeDay": 185.27918781725862,
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967",
    "addressValueSourceType": "0x6B2d4c4bb50274c5D4986Ff678cC971c0260E967_flat_Sushi_emission",
    "apr": 8.888,
    "boostable": false,
    "harvestable": false,
    "maxApr": 8.888,
    "minApr": 8.888,
    "name": "Sushi Rewards",
    "oneDay": 8.888,
    "sevenDay": 8.888,
    "thirtyDay": 8.888,
    "threeDay": 8.888,
    "type": "flat_Sushi_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "harvestable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "oneDay": 6.969,
    "sevenDay": 6.969,
    "thirtyDay": 6.969,
    "threeDay": 6.969,
    "type": "boosted_bBADGER_emission",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests non standard vault performance returns value sources from fallback methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 189.11917098445593,
    "boostable": false,
    "harvestable": false,
    "maxApr": 189.11917098445593,
    "minApr": 189.11917098445593,
    "name": "Vault Compounding",
    "oneDay": 183.4170854271372,
    "sevenDay": 189.11917098445593,
    "thirtyDay": 214.7058824357754,
    "threeDay": 185.27918781725862,
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_flat_Sushi_emission",
    "apr": 8.888,
    "boostable": false,
    "harvestable": false,
    "maxApr": 8.888,
    "minApr": 8.888,
    "name": "Sushi Rewards",
    "oneDay": 8.888,
    "sevenDay": 8.888,
    "thirtyDay": 8.888,
    "threeDay": 8.888,
    "type": "flat_Sushi_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "harvestable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "oneDay": 6.969,
    "sevenDay": 6.969,
    "thirtyDay": 6.969,
    "threeDay": 6.969,
    "type": "boosted_bBADGER_emission",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests standard vault performance returns value sources from standard methods 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 78800,
    "boostable": false,
    "harvestable": false,
    "maxApr": 78800,
    "minApr": 78800,
    "name": "Vault Compounding",
    "oneDay": 78800,
    "sevenDay": 78800,
    "thirtyDay": 78800,
    "threeDay": 78800,
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_flat_bCVXCRV_emission",
    "apr": 10.091652451200876,
    "boostable": false,
    "harvestable": false,
    "maxApr": 10.091652451200876,
    "minApr": 10.091652451200876,
    "name": "bCVXCRV Rewards",
    "oneDay": 10.091652451200876,
    "sevenDay": 10.091652451200876,
    "thirtyDay": 10.091652451200876,
    "threeDay": 10.091652451200876,
    "type": "flat_bCVXCRV_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_cvxcrv_compounding",
    "apr": 228,
    "boostable": false,
    "harvestable": false,
    "maxApr": 228,
    "minApr": 228,
    "name": "cvxCRV Compounding",
    "oneDay": 228,
    "sevenDay": 228,
    "thirtyDay": 228,
    "threeDay": 228,
    "type": "cvxcrv_compounding",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_flat_bveCVX_emission",
    "apr": 45.14325734880511,
    "boostable": false,
    "harvestable": false,
    "maxApr": 45.14325734880511,
    "minApr": 45.14325734880511,
    "name": "bveCVX Rewards",
    "oneDay": 45.14325734880511,
    "sevenDay": 45.14325734880511,
    "thirtyDay": 45.14325734880511,
    "threeDay": 45.14325734880511,
    "type": "flat_bveCVX_emission",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_bvecvx_compounding",
    "apr": 4788,
    "boostable": false,
    "harvestable": false,
    "maxApr": 4788,
    "minApr": 4788,
    "name": "bveCVX Compounding",
    "oneDay": 4788,
    "sevenDay": 4788,
    "thirtyDay": 4788,
    "threeDay": 4788,
    "type": "bvecvx_compounding",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "harvestable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "oneDay": 6.969,
    "sevenDay": 6.969,
    "thirtyDay": 6.969,
    "threeDay": 6.969,
    "type": "boosted_bBADGER_emission",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests standard vault performance skips all emitted tokens with no price 1`] = `
Array [
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_compound",
    "apr": 78800,
    "boostable": false,
    "harvestable": false,
    "maxApr": 78800,
    "minApr": 78800,
    "name": "Vault Compounding",
    "oneDay": 78800,
    "sevenDay": 78800,
    "thirtyDay": 78800,
    "threeDay": 78800,
    "type": "compound",
  },
  CachedValueSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "addressValueSourceType": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28_boosted_bBADGER_emission",
    "apr": 6.969,
    "boostable": false,
    "harvestable": false,
    "maxApr": 6.969,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "oneDay": 6.969,
    "sevenDay": 6.969,
    "thirtyDay": 6.969,
    "threeDay": 6.969,
    "type": "boosted_bBADGER_emission",
  },
]
`;
